Bug 937227 - Zero-initialize fields in nsWindowSizes. r=njn, a=bajaj